# FILM

./: README.md  pyproject.toml  test_scene_detection.py
film/: __init__.py  model.py
